# imalig

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmarks.cpp
cmake/: imalig-config.cmake.in
examples/: CMakeLists.txt  imalig_example.cpp
imalig/: BarcodeDetector.hpp  Imalig.hpp  imalig.hpp
sources/: BarcodeDetector.cpp  imalig.cpp
tests/: CMakeLists.txt  imalig_tests.cpp
tests/fixtures/: camera-parameters.yml
